# ai-drone-thesis

./: .gitattributes  .gittignore
docs/: cave-notes.md
launch/: sim_gas_world.launch.py
mapping/: gas_mapper.py
models/ai_drone_camera/: model.config  model.sdf
models/iris/: iris.sdf
ros2_ws/src/ai_drone_gas/: CMakeLists.txt  package.xml
ros2_ws/src/ai_drone_gas/legacy_plugin/: gas_field_plugin.cpp  gas_field_plugin.hpp
ros2_ws/src/ai_drone_gas/scripts/: sim_gas_sensor.py
worlds/: cave_world.world
