<?xml version="1.0"?>
<package format="3">
  <name>ai_drone_gas</name>
  <version>0.2.2</version>
  <description>Gas sensing and mapping nodes for cave simulation</description>

  <maintainer email="sefa@example.com">Sefa</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Bağımlılıklar -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_dev</depend>
  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

